kubernetes/traefik/03-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  selector:
    pod: traefik
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: admin
    - protocol: TCP
      name: websecure
      port: 443
      targetPort: websecure
